# services-security-oidc-listener

./: README.rst  entry-points.txt  pyproject.toml  setup.cfg  setup.py
nagare/services/security/: oidc_listener.py
src/nagare/services/security/: oidc_listener.py
